Added support of map and list based driver capabilities and experiment options